yyerror now takes formatted input, tokens are exported to the scanner and returned properly, added parsing for id and num.
Signed-off-by: Fotios Valasiadis <fvalasiad@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,8 @@
 bin_PROGRAMS = mix-compiler
 
 mix_compiler_SOURCES = \
-		       src/scanner.l \
 		       src/parser.y \
+		       src/scanner.l \
 		       src/main.c
+
+AM_YFLAGS = -d
