Implemented control statements.
Signed-off-by: Fotios Valasiadis <fvalasiad@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,7 @@ bin_PROGRAMS = mix-compiler
 mix_compiler_SOURCES = \
 		       src/parser.y \
 		       src/scanner.l \
+		       src/tac.c \
 		       src/main.c
 
 AM_YFLAGS = -d
