--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,7 @@ mix_compiler_SOURCES = \
 		       src/parser.y \
 		       src/scanner.l \
 		       src/tac.c \
+		       src/MIXAL.c \
 		       src/main.c
 
 AM_YFLAGS = -d
