Now exports MIXAL to an output file, by default named a.out.
Signed-off-by: Fotios Valasiadis <fvalasiad@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,6 +5,7 @@ mix_compiler_SOURCES = \
 		       src/scanner.l \
 		       src/tac.c \
 		       src/MIXAL.c \
+		       src/export.c \
 		       src/main.c
 
 AM_YFLAGS = -d
